@@ -5797,8 +5797,9 @@ genEndFunction (iCode *ic)
       emitDebug (IFFUNC_ISNAKED (sym->type) ? "; naked function: No epilogue." : "; _Noreturn function: No epilogue.");
       return;
     }
-  
-  int stackparmbytes = 0;
+
+  const bool bigreturn = (getSize (sym->type->next) > 4) || IS_STRUCT (sym->type->next);
+  int stackparmbytes = bigreturn * 2;
   for (value *arg = FUNC_ARGS(sym->type); arg; arg = arg->next)
     {
       wassert (arg->sym);
